# Global-Canopy-Height-Map

./: .gitignore  README.md  exploration.ipynb  main.py  npz_to_csv.py  pyproject.toml  sample_extractor.py
datasets_pytorch/ai4forest_camera/: fix_val.csv  samples.csv  train.csv  val.csv
scripts/: compute_dataset_percentiles.py  compute_dataset_statistics.py
training/: config.py  main.py  runner.py  visualization.py
