[project]
name = "global-canopy-height-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.4.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchmetrics>=1.7.0",
    "torchvision>=0.21.0",
    "wandb>=0.19.8",
]
